--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -19,7 +19,7 @@
   @media (max-width: 768px) {
     height: 400px;
     margin-bottom: 30px;
-    border-radius: 0;
+    border-radius: 8px;
   }
 }
 
